# passwd-shell-benchmarks

./: .gitignore  .rustc_info.json  README.md  compare.sh  comparison.txt  getshells.apl  getshells.awk  getshells.c  getshells.cpp  getshells.cr  getshells.go  getshells.hs  getshells.jl  getshells.js  getshells.lisp  getshells.lua  getshells.luajit  getshells.pl  getshells.ps1  getshells.py  getshells.rb  getshells.rs  getshells_m.cr  main.go  test.c  test.nim
.ccls-cache/@@home@me@git@passwd-shell-benchmarks/: @usr@include@bits@floatn-common.h.blob  @usr@include@bits@floatn.h.blob  @usr@include@bits@libc-header-start.h.blob  @usr@include@bits@long-double.h.blob  @usr@include@bits@stdio_lim.h.blob  @usr@include@bits@time64.h.blob  @usr@include@bits@timesize.h.blob  @usr@include@bits@types.h.blob  @usr@include@bits@types@FILE.h.blob  @usr@include@bits@types@__FILE.h.blob  @usr@include@bits@types@__fpos64_t.h.blob  @usr@include@bits@types@__fpos_t.h.blob  @usr@include@bits@types@__locale_t.h.blob  @usr@include@bits@types@__mbstate_t.h.blob  @usr@include@bits@types@locale_t.h.blob  @usr@include@bits@types@struct_FILE.h.blob  @usr@include@bits@typesizes.h.blob  @usr@include@bits@wordsize.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@gnu@stubs-64.h.blob  @usr@include@gnu@stubs.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdio.h.blob  (+5 more)
getshells_multi/: Cargo.toml
getshells_multi/src/: heaptrack.multireader.792020.zst  main.rs  multireader.rs  testlines
getshells_rust/: Cargo.toml
getshells_rust/src/: main.rs  passwd
(+2 files in other folders)
