[package]
name = "getshells_multi"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/multireader.rs"
name = "multireader"

[profile.release]
opt-level = 3
lto = true
panic = "abort"

[dependencies]
ahash = { version = "0.8.3", features = ["no-rng"] }
bstr = "1.3.0"
memchr = { version = "2.5.0", features = ["libc"] }
num_cpus = "1.15.0"
