[package]
name = "getshells"
version = "1.0.0"
edition = "2021"
authors = ["CordlessCoder"]


[profile.release]
opt-level = 3
lto = true
panic = "abort"


[target.'cfg(target_feature = "avx")'.dependencies]
ahash = "0.8.3"

[dependencies]
bstr = "1.3.0"
memchr = { version = "2.5.0", features = ["libc", "use_std"] }
memmap2 = "0.5.10"
